--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,64 @@
     <title>SUS - Sistem za upravljanje skladištem</title>
   </head>
   <body>
+    {% if page != 'login' and page != 'skladista' %}
+    <!-- NAVBAR 1 -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+      <div class="container">
+        <a class="navbar-brand" href={{ url_for('skladista') }}>SUS</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a id="skladiste-meni" class="nav-link" href={{ url_for('popunjenost') }}
+                >Popunjenost</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                id="proizvodilager-meni"
+                class="nav-link"
+                href={{ url_for('proizvodilager') }}
+                >Proizvodi na lageru</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                id="opticajproizvoda-meni"
+                class="nav-link"
+                href={{ url_for('dostupniproizvodi') }}
+                >Proizvodi u opticaju</a
+              >
+            </li>
+            <li class="nav-item">
+              <a id="skladiste-meni" class="nav-link" href={{ url_for('users') }}
+                >Korisnici</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+     </nav>
+    {% else %}
+    <!-- NAVBAR 2 -->
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
+      <div class="container justify-content-center">
+        <a class="navbar-brand" href="#"
+          >SUS - Sistem za upravljanje skladištem</a
+        >
+      </div>
+      </nav>
+    {% endif %}
     {% block content %} {% endblock %}
 
     <script type="text/javascript" src="/static/jquery-3.4.1.min.js"></script>
