--- a/templates/proizvodilager.html
+++ b/templates/proizvodilager.html
@@ -1,52 +1,7 @@
 {% extends 'base.html' %} {% block content%}
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-  <div class="container">
-    <a class="navbar-brand" href={{ url_for('skladista') }}>SUS</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a id="skladiste-meni" class="nav-link" href={{ url_for('popunjenost') }}
-            >Popunjenost</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            id="proizvodilager-meni"
-            class="nav-link"
-            href={{ url_for('proizvodilager') }}
-            >Proizvodi na lageru</a
-          >
-        </li>
-        <li class="nav-item">
-          <a
-            id="opticajproizvoda-meni"
-            class="nav-link"
-            href={{ url_for('dostupniproizvodi') }}
-            >Proizvodi u opticaju</a
-          >
-        </li>
-        <li class="nav-item">
-          <a id="skladiste-meni" class="nav-link" href={{ url_for('users') }}
-            >Korisnici</a
-          >
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+
 
 <!-- Glavni kontejner -->
 <div class="container">
@@ -82,13 +37,13 @@
                     <td>15</td>
                     <td class="d-inline-flex">
                   
-                        <a class="btn btn-primary mb-2 ml-2" href={{ url_for('poruciproizvod') }} role="button">
-                            <!-- <i class=" form-inline fas fa-edit"></i> --> Poruči
+                        <a class="icon-btn mb-2 ml-2" href={{ url_for('poruciproizvod') }} role="button" style="color: #28a745;">
+                          <i class="form-inline fas fa-shopping-cart"></i>     
                           </a>
                 
-                          <a class="btn btn-primary mb-2 ml-2" href={{ url_for('isporuciproizvod') }} role="button">
-                            <!-- <i class=" form-inline fas fa-edit"></i> --> Isporuči
-                          </a>
+                          <a class="icon-btn red mb-2 ml-2" href={{ url_for('isporuciproizvod') }} role="button">
+                            <i class="form-inline fas fa-truck"></i>                       
+                             </a>
                     </td>
                   </tr>
             </tbody>
