--- a/templates/skladista.html
+++ b/templates/skladista.html
@@ -1,14 +1,5 @@
 {% extends 'base.html' %} {% block content%}
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-4">
-  <div class="container justify-content-center">
-    <a class="navbar-brand" href={{ url_for('skladista') }}
-      >SUS - Sistem za upravljanje skladištem</a
-    >
-  </div>
-</nav>
-
 <!-- Glavni kontejner -->
 <div class="container">
     <div class="row justify-content-end my-3">
@@ -27,42 +18,38 @@
         <div id="tabelDiv-Skladiste" class="tabelDiv">
           <table class="table table-striped" id="skladiste-tabela">
             <thead>
-              <tr>
-                <th>ID</th>
-                <th>Naziv</th>
-                <th>Adresa</th>
-                <th>Kapacitet</th>
-                <th>Prikaži</th>
-                <th>Akcije</th>
-              </tr>
+                <tr>
+                    <th class="align-middle">ID</th>
+                    <th class="align-middle">Naziv</th>
+                    <th class="align-middle">Adresa</th>
+                    <th class="align-middle">Kapacitet</th>
+                    <th class="align-middle">Prikaži</th>
+                    <th class="align-middle">Akcije</th>
+                </tr>
             </thead>
             <tbody id="skladiste-telo">
                 <tr>
-            
-                    <td>1</td>
-                    <td>Gigatron Nis</td>
-                    <td>Knjazevacka 10</td>
-                    <td>10000</td>
-                    <td>
-                        <a class="btn btn-primary mb-2 ml-2" href={{ url_for('users') }} role="button">
-                            <!-- <i class=" form-inline fas fa-edit"></i> --> Prikaži
-                          </a>
+                    <td class="align-middle">1</td>
+                    <td class="align-middle">Gigatron Nis</td>
+                    <td class="align-middle">Knjaževačka 10</td>
+                    <td class="align-middle">10000</td>
+                    <td class="align-middle text-center">
+                        <a class="btn btn-primary" href={{ url_for('users') }} role="button">Prikaži</a>
                     </td>
-                    <td class="d-inline-flex">
-                  
-                        <a class="icon-btn orange mb-2 ml-2" href={{ url_for('users') }} role="button">
-                            <i class=" form-inline fas fa-edit"></i>
-                          </a>
-                
-                          <form action="">
-                            <button class="form-inline icon-btn red mb-2 ml-2">
-                              <i class="fas fa-trash-alt "></i>
+                    <td class="align-middle text-center">
+                        <a class="icon-btn orange" href={{ url_for('users') }} role="button">
+                            <i class="fas fa-edit"></i>
+                        </a>
+                        <form action="" class="d-inline">
+                            <button class="icon-btn red" type="submit">
+                                <i class="fas fa-trash-alt"></i>
                             </button>
-                          </form>
+                        </form>
                     </td>
-                  </tr>
+                </tr>
             </tbody>
-          </table>
+        </table>
+        
         </div>
       </div>
     </div>
