--- a/templates/edituser.html
+++ b/templates/edituser.html
@@ -1,45 +1,44 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
+<!-- forma -->
 
-
-  <!-- forma -->
-
-  <div class='container col-lg-2 col-xs-12'>
-
- <div class="my-5">
-  <h3>Izmena korisnika</h3>
- </div>
-
-  <form>
-
-  <div class="form-group">
-    <label for="ime">Ime</label>
-    <input type="text" class="form-control" id="ime">
+<div class="container col-lg-2 col-xs-12">
+  <div class="my-5">
+    <h3>Izmena korisnika</h3>
   </div>
 
-  
-  <div class="form-group">
-    <label for="prezime">Prezime</label>
-    <input type="text" class="form-control" id="prezime">
-  </div>
-
-  <div class="form-group">
-    <label for="emailNovi">Email</label>
-    <input type="email" class="form-control" id="emailNovi">
-  </div>
-
-  <div class="form-group">
-    <label for="lozinka">Lozinka</label>
-    <input type="text" class="form-control" id="lozinka">
-  </div>
-  
-  <a class="btn btn-primary" href='#' role="button">Sačuvaj</a>
-</form>
-      
+  <form action="{{ url_for('edituser', id=user.id) }}" method="POST">
+      <div class="form-group">
+      <label for="ime">Ime</label>
+      <input type="text" class="form-control" id="ime" name="ime" value={{ user.ime }} required />
     </div>
-  </div>
-  
+
+    <div class="form-group">
+      <label for="prezime">Prezime</label>
+      <input type="text" class="form-control" id="prezime" name="prezime" value={{ user.prezime }} required />
+    </div>
+
+    <div class="form-group">
+      <label for="emailNovi">Email</label>
+      <input type="email" class="form-control" id="emailNovi" name="emailNovi" value={{ user.email }} required />
+    </div>
+
+    <div class="form-group">
+      <label for="lozinka">Lozinka</label>
+      <input type="password" class="form-control" id="lozinka" name="lozinka" />
+    </div>
+
+    <div class="form-group">
+      <label for="rola">Rola</label>
+      <select class="form-control" id="rola" name="rola">
+        <option value="Administrator" {% if user.rola == 'Administrator' %} selected {% endif %}>Administrator</option>
+        <option value="Zaposleni" {% if user.rola == 'Zaposleni' %} selected {% endif %}>Zaposleni</option>
+        <option value="Menadzer" {% if user.rola == 'Menadzer' %} selected {% endif %}>Menadžer</option>
+      </select>
+    </div>
+
+    <button type="submit" class="btn btn-primary" href="#" role="button">Sačuvaj</a>
+  </form>
 </div>
 
-  {% endblock %}
+{% endblock %}
