--- a/templates/newuser.html
+++ b/templates/newuser.html
@@ -1,45 +1,44 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
-
   <!-- forma -->
-
   <div class='container col-lg-2 col-xs-12'>
-
- <div class="my-5">
-  <h3>Novi korisnik</h3>
- </div>
-
-  <form>
-
-  <div class="form-group">
-    <label for="ime">Ime</label>
-    <input type="text" class="form-control" id="ime">
-  </div>
-
-  
-  <div class="form-group">
-    <label for="prezime">Prezime</label>
-    <input type="text" class="form-control" id="prezime">
-  </div>
-
-  <div class="form-group">
-    <label for="emailNovi">Email</label>
-    <input type="email" class="form-control" id="emailNovi">
-  </div>
-
-  <div class="form-group">
-    <label for="lozinka">Lozinka</label>
-    <input type="text" class="form-control" id="lozinka">
-  </div>
-  
-  <a class="btn btn-primary" href='#' role="button">Sačuvaj</a>
-</form>
-      
+    <div class="my-5">
+        <h3>Novi korisnik</h3>
     </div>
-  </div>
+
+    <form action={{ url_for('newuser') }} method="POST">
+        <div class="form-group">
+            <label for="ime">Ime</label>
+            <input type="text" class="form-control" id="ime" name="ime">
+        </div>
   
+        <div class="form-group">
+            <label for="prezime">Prezime</label>
+            <input type="text" class="form-control" id="prezime" name="prezime">
+        </div>
+
+        <div class="form-group">
+            <label for="emailNovi">Email</label>
+            <input type="email" class="form-control" id="emailNovi" name="emailNovi"> 
+        </div>
+
+        <div class="form-group">
+            <label for="lozinka">Lozinka</label>
+            <input type="password" class="form-control" id="lozinka" name="lozinka">
+        </div>
+        
+        <div class="form-group">
+            <label for="rola">Rola</label>
+            <select class="form-control" id="rola" name="rola">
+                <option value="Administrator">Administrator</option>
+                <option value="Zaposleni">Zaposleni</option>
+                <option value="Menadzer">Menadžer</option>
+            </select>
+        </div>
+  
+        <button type="submit" class="btn btn-primary" href='#' role="button">Sačuvaj</button>
+    </form>
 </div>
 
   {% endblock %}
