--- a/templates/login.html
+++ b/templates/login.html
@@ -10,18 +10,18 @@
   <div class="row justify-content-center">
     <div class="col-lg-6 col-xs-12">
 
-      <form>
+      <form action={{ url_for('login') }} method="POST">
   <div class="form-group">
     <label for="exampleInputEmail1">Email adresa</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
     
   </div>
   <div class="form-group">
     <label for="exampleInputPassword1">Lozinka</label>
-    <input type="password" class="form-control" id="exampleInputPassword1">
+    <input type="password" name="lozinka" class="form-control" id="exampleInputPassword1">
   </div>
   
-  <a class="btn btn-primary" href= {{ url_for('users') }} role="button">Prijavi se</a>
+  <button type="submit" class="btn btn-primary" role="button">Prijavi se</button>
 </form>
       
     </div>
