--- a/templates/newuser.html
+++ b/templates/newuser.html
@@ -29,8 +29,8 @@
         </div>
         
         <div class="form-group">
-            <label for="rola">Rola</label>
-            <select class="form-control" id="rola" name="rola">
+            <label for="role">Rola</label>
+            <select class="form-control" id="role" name="role">
                 <option value="Administrator">Administrator</option>
                 <option value="Zaposleni">Zaposleni</option>
                 <option value="Menadzer">Menadžer</option>
