--- a/templates/users.html
+++ b/templates/users.html
@@ -23,7 +23,7 @@
         <td>{{user.ime}}</td>
         <td>{{user.prezime}}</td>
         <td>{{user.email}}</td>
-        <td>{{user.rola}}</td>
+        <td>{{user.role}}</td>
         <td class="d-inline-flex">
           <a
             class="icon-btn orange mb-2 ml-2"
