--- a/templates/dostupniproizvodi.html
+++ b/templates/dostupniproizvodi.html
@@ -26,32 +26,48 @@
                 <th>Naziv</th>
                 <th>Kategorija</th>
                 <th>Cena</th>
+                <th>Slika</th>
                 <th>Akcije</th>
               </tr>
             </thead>
             <tbody id="skladisteproizvod-telo">
-                <tr>
-            
-                    <td>1</td>
-                    <td>Laptop</td>
-                    <td>Elektronika</td>
-                    <td>79900</td>
-                    <td class="d-inline-flex">
-                  
-                        <a class="icon-btn orange mb-2 ml-2" href={{ url_for('editproizvod') }} role="button">
-                            <i class=" form-inline fas fa-edit"></i>
-                          </a>
-                
-                          <form action="">
-                            <button class="form-inline icon-btn red mb-2 ml-2">
-                              <i class="fas fa-trash-alt "></i>
-                            </button>
-                          </form>
-                    </td>
-                  </tr>
+              {% for proizvod in proizvod %}
+              <tr>
+                <td class="align-middle">{{proizvod.id}}</td>
+                <td class="align-middle">{{proizvod.naziv}}</td>
+                <td class="align-middle">{{proizvod.kategorija}}</td>
+                <td class="align-middle">{{proizvod.cena}}</td>
+                <td class="align-middle">
+                  <img 
+                    {% if proizvod.slika %}
+                      src="/static/uploads/{{ proizvod.slika }}"
+                    {% else %}
+                      src="/static/placeholder.png"
+                    {% endif %} 
+                    id="slika_pregled" 
+                    width="100" 
+                    height="100"
+                    class="img-fluid"
+                  />
+                </td>
+                <td class="align-middle text-center d-flex justify-content-center">
+                  <a class="icon-btn orange mb-2 ml-2" href={{ url_for('editproizvod', id=proizvod.id) }} role="button">
+                    <i class="fas fa-edit"></i>
+                  </a>
+                  <form action={{ url_for('deleteproizvod', id=proizvod.id)  }} method="POST">
+                    <button class="icon-btn red mb-2 ml-2">
+                      <i class="fas fa-trash-alt "></i>
+                    </button>
+                  </form>
+                </td>
+              </tr>
+              {% endfor %}
             </tbody>
           </table>
         </div>
+        
+        
+        
       </div>
     </div>
   </div>
