--- a/templates/newproizvod.html
+++ b/templates/newproizvod.html
@@ -1,39 +1,60 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
+<!-- forma -->
 
-  <!-- forma -->
-
-  <div class='container col-lg-2 col-xs-12'>
-
- <div class="my-5">
-  <h3>Novi proizvod</h3>
- </div>
-
-  <form>
-
-  <div class="form-group">
-    <label for="naziv">Naziv</label>
-    <input type="text" class="form-control" id="naziv">
+<div class="container col-lg-2 col-xs-12">
+  <div class="my-5">
+    <h3>Novi proizvod</h3>
   </div>
 
-  
-  <div class="form-group">
-    <label for="kategorija">Kategorija</label>
-    <input type="text" class="form-control" id="prezime">
-  </div>
-
-  <div class="form-group">
-    <label for="cena">Cena</label>
-    <input type="number" class="form-control" id="cena">
-  </div>
-  
-  <a class="btn btn-primary" href='#' role="button">Dodaj</a>
-</form>
-      
+  <form action={{ url_for('newproizvod') }} method="POST" enctype="multipart/form-data">
+    <div class="form-group">
+      <label for="naziv">Naziv</label>
+      <input type="text" class="form-control" id="naziv" name="naziv"/>
     </div>
-  </div>
-  
+
+    <div class="form-group">
+      <label for="kategorija">Kategorija</label>
+      <input type="text" class="form-control" id="kategorija" name="kategorija"/>
+    </div>
+
+    <div class="form-group">
+      <label for="cena">Cena</label>
+      <input type="number" class="form-control" id="cena" name="cena" />
+    </div>
+
+    <div class="form-group">
+      <label for="slika">
+        <img id="slika_pregled" src="/static/placeholder.png" />
+      </label>
+      <label for="slika" class="btn btn-primary">Odaberi sliku</label>
+      <input
+        type="file"
+        accept="image/*"
+        class="custom-file-input"
+        hidden
+        id="slika"
+        name="slika"
+      />
+    </div>
+
+    <button type="submit" class="btn btn-primary" href="#" role="button">Dodaj</button>
+  </form>
 </div>
 
-  {% endblock %}
+<script>
+  document.getElementById("slika").addEventListener("change", function (e) {
+    var reader = new FileReader();
+    const file = e.target.files[0];
+
+    reader.onload = function (e) {
+      document
+        .getElementById("slika_pregled")
+        .setAttribute("src", e.target.result);
+    };
+
+    reader.readAsDataURL(file);
+  });
+</script>
+
+{% endblock %}
