--- a/templates/proizvodilager.html
+++ b/templates/proizvodilager.html
@@ -23,32 +23,44 @@
                 <th>Naziv</th>
                 <th>Kategorija</th>
                 <th>Cena</th>
-                <th>Kolicina</th>
+                <th>Količina</th>
+                <th>Slika</th>
                 <th>Akcije</th>
               </tr>
             </thead>
             <tbody id="skladisteproizvod-telo">
-                <tr>
-            
-                    <td>1</td>
-                    <td>Laptop</td>
-                    <td>Elektronika</td>
-                    <td>79900</td>
-                    <td>15</td>
-                    <td class="d-inline-flex">
-                  
-                        <a class="icon-btn mb-2 ml-2" href={{ url_for('poruciproizvod') }} role="button" style="color: #28a745;">
-                          <i class="form-inline fas fa-shopping-cart"></i>     
-                          </a>
-                
-                          <a class="icon-btn red mb-2 ml-2" href={{ url_for('isporuciproizvod') }} role="button">
-                            <i class="form-inline fas fa-truck"></i>                       
-                             </a>
-                    </td>
-                  </tr>
+              <tr>
+                <td class="align-middle">1</td>
+                <td class="align-middle">Laptop</td>
+                <td class="align-middle">Elektronika</td>
+                <td class="align-middle">79900</td>
+                <td class="align-middle">15</td>
+                <td class="align-middle">
+                  <img 
+                    {% if proizvod.slika %}
+                      src="/static/uploads/{{ proizvod.slika }}"
+                    {% else %}
+                      src="/static/placeholder.png"
+                    {% endif %} 
+                    id="slika_pregled" 
+                    width="100" 
+                    height="100"
+                    class="img-fluid"
+                  />
+                </td>
+                <td class="align-middle d-flex justify-content-center">
+                  <a class="icon-btn mb-2 ml-2" href={{ url_for('poruciproizvod') }} role="button" style="color: #28a745;">
+                    <i class="fas fa-shopping-cart"></i>
+                  </a>
+                  <a class="icon-btn red mb-2 ml-2" href={{ url_for('isporuciproizvod') }} role="button">
+                    <i class="fas fa-truck"></i>
+                  </a>
+                </td>
+              </tr>
             </tbody>
           </table>
         </div>
+        
       </div>
     </div>
   </div>
