--- a/templates/newskladiste.html
+++ b/templates/newskladiste.html
@@ -9,23 +9,28 @@
     <h3>Dodaj skladište</h3>
   </div>
 
-  <form>
+  <form action={{ url_for('newskladiste') }} method="POST">
     <div class="form-group">
       <label for="naziv">Naziv</label>
-      <input type="text" class="form-control" id="naziv" />
+      <input type="text" class="form-control" id="naziv" name="naziv" />
     </div>
 
     <div class="form-group">
-      <label for="kategorija">Adresa</label>
-      <input type="text" class="form-control" id="kategorija" />
+      <label for="adresa">Adresa</label>
+      <input type="text" class="form-control" id="adresa" name="adresa" />
     </div>
 
     <div class="form-group">
-      <label for="cena">Kapacitet</label>
-      <input type="number" class="form-control" id="cena" />
+      <label for="kapacitet">Kapacitet</label>
+      <input
+        type="number"
+        class="form-control"
+        id="kapacitet"
+        name="kapacitet"
+      />
     </div>
 
-    <a class="btn btn-primary" href="#" role="button">Dodaj</a>
+    <button type="submit" class="btn btn-primary" href="#" role="button">Dodaj</button>
   </form>
 </div>
 
