--- a/templates/newproizvod.html
+++ b/templates/newproizvod.html
@@ -7,7 +7,7 @@
     <h3>Novi proizvod</h3>
   </div>
 
-  <form action={{ url_for('newproizvod') }} method="POST" enctype="multipart/form-data">
+  <form action={{ url_for('newproizvod', sid=sid) }} method="POST" enctype="multipart/form-data">
     <div class="form-group">
       <label for="naziv">Naziv</label>
       <input type="text" class="form-control" id="naziv" name="naziv"/>
