--- a/templates/isporuciproizvod.html
+++ b/templates/isporuciproizvod.html
@@ -11,15 +11,22 @@
   <h3>Isporuči proizvod</h3>
  </div>
 
-  <form>
+  <form action={{ url_for('isporuciproizvod', sid=sid, id=id) }} method="POST">
 
   <div class="form-group">
     <label for="izaberi-proizvod">Izaberi proizvod</label>
                 <select
                   id="izaberi-proizvod"
                   class="form-control"
+                  name="proizvod"
                   required
-                ></select>
+                >
+
+                {% for proizvod in proizvod %}
+                <option value="{{ proizvod.id }}" {% if proizvod.id == id|int %} selected {% endif %}>{{ proizvod.naziv }}</option>
+              {% endfor %}
+              
+              </select>
   </div>
 
   
@@ -30,11 +37,12 @@
                   class="form-control"
                   id="kolicina-proizvod"
                   placeholder=""
+                  name="kolicina"
                   required
                 />
   </div>
   
-  <a class="btn btn-primary" href='#' role="button">Isporuči</a>
+  <button type="submit" class="btn btn-primary" role="button">Isporuči</button>
 </form>
       
     </div>
