--- a/templates/proizvodilager.html
+++ b/templates/proizvodilager.html
@@ -312,9 +312,9 @@
     }
 },
       buttons: [ 'copy', 'csv', 'excel', 'pdf' ],
-      columnDefs: [
-        { "orderable": false, "targets": [4, 5] }
-      ],
+      // columnDefs: [
+      //   { "orderable": false, "targets": [4, 5] }
+      // ],
     });
     table.buttons().container()
           .appendTo( '#skladisteproizvod-tabela_wrapper .col-md-6:eq(0)' );
